--- a/pokemon-api/env/base.env
+++ b/pokemon-api/env/base.env
@@ -1,7 +1,9 @@
 PYTHONUNBUFFERED=1
 
-DEFAULT_HOST=http://localhost:8000
-FRONTEND_HOST=http://localhost:4200
+DEFAULT_HOST=localhost
+DEFAULT_HOST_PORT=8000
+FRONTEND_HOST=localhost
+FRONTEND_HOST_PORT=4000
 
 DB_NAME=pokemon
 DB_USER=postgres
