--- a/new_k8s/configmap.yaml
+++ b/new_k8s/configmap.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: configmap
+  name: pokemon-configmap
 data:
   DB_NAME: pokemon
-  DB_HOST: localhost
-  DB_PORT: 5432
-  REDIS_HOST: localhost
-  REDIS_PORT: 6379
+  DB_HOST: db-service
+  DB_PORT: "5432"
+  REDIS_HOST: cache-service
+  REDIS_PORT: "6379"
