--- a/new_k8s/api.yaml
+++ b/new_k8s/api.yaml
@@ -85,17 +85,6 @@ spec:
                   name: pokemon-secret
                   key: DB_PASSWORD
 ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: pokemon-api-service
-# spec:
-#   selector:
-#     app: pokemon-api
-#   ports:
-#     - port: 8000
-#       targetPort: 8000
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -103,10 +92,21 @@ metadata:
 spec:
   selector:
     app: pokemon-api
-  type: LoadBalancer  
   ports:
-    - protocol: TCP
-      port: 8000
+    - port: 8000
       targetPort: 8000
-      nodePort: 30001
+
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: pokemon-api-service
+# spec:
+#   selector:
+#     app: pokemon-api
+#   type: LoadBalancer  
+#   ports:
+#     - protocol: TCP
+#       port: 8000
+#       targetPort: 8000
+#       nodePort: 30001
 
