--- a/new_k8s/client.yaml
+++ b/new_k8s/client.yaml
@@ -23,6 +23,19 @@ spec:
           image: verline/pokemon-client
           stdin: true
 ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: pokemon-client-service
+# spec:
+#   selector:
+#     app: pokemon-client
+#   type: LoadBalancer  
+#   ports:
+#     - protocol: TCP
+#       port: 3000
+#       targetPort: 3000
+#       nodePort: 30000
 apiVersion: v1
 kind: Service
 metadata:
@@ -30,9 +43,6 @@ metadata:
 spec:
   selector:
     app: pokemon-client
-  type: LoadBalancer  
   ports:
-    - protocol: TCP
-      port: 3000
+    - port: 80
       targetPort: 3000
-      nodePort: 30000
